Bug 944613 [Settings] The \"SIM manager" should be \"SIM Manager\"

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -549,7 +549,7 @@ sample-format=Sample Format
 longDateFormat=%A, %B %d, %Y
 
 # Personalization :: Sim cards manager
-simManager=SIM manager
+simManager=SIM Manager
 # LOCALIZATION NOTE (simManager-header): if you leave the original
 # en-US value "{{simManager}}" in the following string, the localization
 # will be automatically picked from the existing string with ID "simManager".
