[ftu] typo in ftu: 'messasges' should be 'messages'

--- a/apps/communications/ftu/locales/ftu.en-US.properties
+++ b/apps/communications/ftu/locales/ftu.en-US.properties
@@ -75,7 +75,7 @@ inputCodeRetriesLeft[other] ={{n}} tries left.
 simManager=SIM Manager
 simDetail=SIM {{n}}
 simDefault=(default)
-simDefaultMessage=Outgoing calls, outgoing messasges and data connection are set to SIM 1 as default
+simDefaultMessage=Outgoing calls, outgoing messages and data connection are set to SIM 1 as default
 simSettingsMessage=You can change default settings at Settings > SIM cards manager
 simPinLocked=SIM PIN locked
 noOperator=No operator
