Bug 937443 - Changed the case of several Settings app strings as per Harly Hsu's requests

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -444,7 +444,7 @@ hotspotSettings=Hotspot settings
 # in headers, you can use a shorter string here.
 hotspotSettings-header={{hotspotSettings}}
 ssid-name=SSID network name
-hotspot-open=open
+hotspot-open=Open
 hotspot-wpa-psk=WPA (TKIP)
 hotspot-wpa2-psk=WPA2 (AES)
 hotspot-password-desc=The password must have at least 8 characters.
@@ -505,7 +505,7 @@ one-minute   =  1 minute
 two-minutes  =  2 minutes
 five-minutes =  5 minutes
 ten-minutes  = 10 minutes
-never=never
+never=Never
 lock-orientation=Lock orientation
 
 # Personalization :: Notifications
