--- a/apps/calendar/locales/calendar.en-US.properties
+++ b/apps/calendar/locales/calendar.en-US.properties
@@ -43,6 +43,7 @@ advanced-settings-reminders=Reminders
 field-user.placeholder=Username
 field-password.placeholder=Password
 field-full-url.placeholder=URL
+setup-progress-wait-msg=Setting up account
 modify-account-setting-up=Please wait while your account is set up
 modify-account-unable-to-sync=Unable to sync
 modify-account-sign-in=Sign in
@@ -89,8 +90,8 @@ sync-frequency-hourly.textContent=Each hour
 
 none=None
 remind-me=Remind me
-from-time=From: 
-to-time=To: 
+from-time=From:
+to-time=To:
 
 alarm-at-event-standard=At time of event
 alarm-at-event-allday=On day of event
