Bugzilla 965169: In Diaplay settings Brightness level not in percentage

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -1110,3 +1110,6 @@ stkItemsNaiCloseChannel=Close Channel
 stkItemsNaiReceiveData=Receive Data
 stkItemsNaiSendData=Send Data
 stkItemsNaiGetChannelStatus=Get Channel Status
+
+brightness-level-percent = {{level}}%
+
